# c_cpp-examples

./: LICENSE
kpassivepopup/: CMakeLists.txt  main.cpp
libnotify/: CMakeLists.txt  main.c
libpuzzle/: CMakeLists.txt  main.c
opencv-facedetection/: CMakeLists.txt  main.cpp
